[package]
name = "worker_lib"
version = "0.2.4"
edition = "2021"
authors = ["darryl.west@raincitysoftware.com"]
rust-version = "1.65"
description = "A framework for supervising multiple async workers with generic tasks"
keywords = ["supervisor", "worker-pool", "worker", "lib" ]
license = "MIT OR Apach-2.0"
readme = "README.md"
homepage = "https://github.com/darrylwest/worker-lib"
repository = "https://github.com/darrylwest/worker-lib"
exclude = [ ".github/*" ]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
async-std = { version = "1.12.0", features = ["async-attributes", "async-process", "attributes", "futures-core", "tokio1", ] }
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
domain_keys = { git = "https://github.com/darrylwest/domain-keys.git" }
service_uptime = { git = "https://github.com/darrylwest/service-uptime.git" }
hashbrown = { version = "0.13.1", features = ["serde"] }
fastrand = "1.8.0"
